--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -59,7 +59,7 @@
 
 }
 
-
+html {overflow-x: hidden;}
 body {overflow-x: hidden;}
 
 body {background: var(--colorBackground);}
