--- a/wedding_website/_sass/typography.scss
+++ b/wedding_website/_sass/typography.scss
@@ -71,7 +71,7 @@ h1 {
 }
 
 h2 {
-    .page-content & { font-size: clamp(2.25rem, 7vw, 3.6rem); }
+    .page-content & { font-size: clamp(2.25rem, 7vw, 3.6rem); margin-top: 2rem; }
     
     font-family: var(--fontOgg); letter-spacing: -1px; text-transform: lowercase;
 } // end h2
